Fix 104370: Draw: Don't request the same attribute more than once

Avoid running out of attributes when multiple material slots use the same one.
Ideally, we should skip materials with no asigned geometry as well.